--- a/src/app/pages/home/pages/index/index.component.html
+++ b/src/app/pages/home/pages/index/index.component.html
@@ -75,24 +75,27 @@
               <div class="line">
                 <div></div>
                 <span class="year">
-                  <span>{{ toDay | date:'yyyy-MM' }}</span>
+                  <span>2022-07</span>
                 </span>
                 <div></div>
               </div>
               <div class="description">
-                <h3>Tech Lead</h3>
+                <h3>資旅軟體開發有限公司</h3>
                 <ul>
                   <li>
-                    帶領團隊完成目標，專案成員學習以及培訓
+                    Team Leader
                   </li>
                   <li>
-                    負責基礎架構建設以及導入新技術進入專案內
+                    參與屈臣氏每日會議，梳理客戶JIRA需求
                   </li>
                   <li>
-                    向上管理協助團隊取得資源及支援
+                    協助團隊完成JIRA任務，新人學習以及技能培訓
+                  </li>
+                  <li>
+                    提供前端技術諮詢
                   </li>
                 </ul>
-                <span class="icon icon-user"></span>
+                <span class="icon icon-briefcase"></span>
               </div>
             </div>
             <div class="education">
@@ -107,10 +110,53 @@
                 <h3>Wistron Corporation</h3>
                 <ul>
                   <li>
-                    負責前端 & 後端開發
+                    Tech Leader
                   </li>
                   <li>
-                    專案使用azure服務 (power automate)
+                    協助團隊完成專案目標，新人學習以及技能培訓
+                  </li>
+                  <li>
+                    向上協助團隊取得資源及支援
+                  </li>
+                  <li>
+                    參與Scrum開發流程，梳理使用者需求
+                  </li>
+                  <li>
+                    提供前後端技術諮詢
+                  </li>
+                </ul>
+                <ul>
+                  <li>
+                    後端
+                  </li>
+                  <li>
+                    後端RESTful API架構設計以及開發
+                  </li>
+                  <li>
+                    串接跨系統資料
+                  </li>
+                  <li>
+                    撰寫Unit test
+                  </li>
+                  <li>
+                    Code Review
+                  </li>
+                </ul>
+                <ul>
+                  <li>
+                    前端
+                  </li>
+                  <li>
+                    前端專案架構設計以及開發
+                  </li>
+                  <li>
+                    緯創大陸工廠dashboard開發
+                  </li>
+                  <li>
+                    RWD看板製作
+                  </li>
+                  <li>
+                    Code Review
                   </li>
                 </ul>
                 <span class="icon icon-briefcase"></span>
@@ -178,15 +224,24 @@
             <h2>作品簡介</h2>
             <ul>
               <li>
+                <h3>屈臣氏線上購物網站</h3>
+                <p>
+                  工作型態由以往專案變成維護以及解決issue為主，不同於專案或者開發產品，大型國際網站的穩定以及內容是不同的挑戰，每日會議接收香港JIRA任務，帶領小組排除以及解決線上購物網站問題，完成客戶之需求
+                </p>
+                <p>
+                  程式碼的code review，不允許造成其他國家額外問題，需要更嚴謹的執行，需要訓練以及帶領團隊有效的SOP流程來穩定交付任務
+                </p>
+              </li>
+              <li>
                 <h3>數位轉型專案 Design Debug Efficient (DDE)</h3>
                 <p>
-                  Design Debug Efficient，改善電路設計品質與效率，減少反覆除錯時間。目前小團隊專案人數約為 5 人，總專案大概為10人，我在專案內擔任 Tech Lead，負責帶領團隊成員開發專案。
+                  Design Debug Efficient，改善電路設計品質與效率，減少反覆除錯時間。小團隊專案人數約為 5 人，後期總專案大概為10人，我在專案內擔任 Tech Lead，負責帶領團隊成員開發專案。
                 </p>
                 <p>
                   效益: 成功在每個 Sprint 交付軟體，與 Project Owner 共同為公司節省 500萬開支，跨開發團隊與各上雲計畫小組協同，為組織節省每月上雲費用 30%。
                 </p>
                 <p>
-                  從前端轉戰後端是一大挑戰，包括框架上(Node)的熟悉，資料的規劃，以及Infra都是所需要著手去處理的，因為熟悉前端，會知道前端所需API格式以及需求，可以快速產出API．使用到了前端不會操作到的資料庫PostgreSQL，以及資料設計上的正規化，資料處理上也運用了Nifi以及Kubernetes一些服務來減少開發端的負擔，包括切分micro-service以及運用cicd自動化來減少重複性的工作。
+                  從前端轉戰後端是一大挑戰，包括框架上(Node)的熟悉，資料的規劃，以及Infra都是所需要著手去處理的，因為熟悉前端，會知道前端所需API格式以及需求，可以快速產出API．使用到了前端不會操作到的資料庫PostgreSQL，以及資料設計上的正規化，資料處理上也運用了Nifi以及使用雲服務Kubernetes來減少開發端的負擔，包括切分micro-service以及運用cicd自動化來減少重複性的工作。
                 </p>
                 <p>
                   工作模式上也由主管瀑布式的需求轉變為敏捷開發，與小組配合以及PO的溝通是一大轉變，也因應敏捷是很重要的趨勢，所以考取了Scrum Master證照。
@@ -305,7 +360,7 @@
                 </p>
                 <ul class="t-description list-block">
                   <li>
-                    明確的需求，確認團隊內所有人都了解需求以及功能，在Planning時由RD們說故事需求給PO聽，進而了解是否有遺漏或者需要變更的地方。
+                    明確的需求，確認團隊內所有人都了解需求以及功能，在以往的Planning時由RD們說故事需求給PO聽，或者是現在的每日會議討論需求，進而了解是否有遺漏或者需要變更的地方。
                   </li>
                   <li>
                     快速理解功能需求、提供前端共用元件設計意見給此專案所需．協助前後端複雜格式梳理，幫助後端規劃複雜功能資料表，可以加速團隊開發。
@@ -317,7 +372,7 @@
                 </ul>
               </li>
               <li>
-                <h3>喜歡新鮮事物</h3>
+                <h3>喜歡以及挑戰新鮮事物</h3>
                 <p class="margin-0">
                   資訊爆炸的時代，隨時關注熱門以及感興趣事物，讓自我能力不落人後，不管前端或者後端，需要學習的太多，但擔任TL發現不應該都執著於技術上的進步，Infra的操作以及了解也是非常重要的。
                   包括資料並不是只有程式碼的開發才能處理，微軟的服務也逐漸走向不需要程式碼的幫助就能做到需要的功能，上雲後的主流，以及Kubernetes這些都是現在需要更去深入了解的，而不是技術上的追求。
